recursion.hanoi.lessons.recursion.hanoi.HanoiBoard.scala.error
HanoiBoard:7: error: reassignment to val
	if (height=1) {
                  ^